  http://news.xp-framework.net/article/351/2010/04/04/
  (friebe)
- Changed command line reflection ("xp -r") to display generic definitions
  (friebe)
- Extended is() core functionality to accept primitive and array types
  (friebe)
- Added isInstance() method to lang.Type and lang.Primitive classes
  (friebe)
- Added typeof() core functionality
  (friebe)

RFCs
~~~~
- Implemented RFC #0181 - SystemExit
  (friebe)
- Implemented RFC #0194 - Add XPClass::getDeclared*() methods
  (friebe)
- Implemented RFC #0193 - Generics optimization
  (friebe)
- Implemented RFC #0197 - Type literals in tokens
  (friebe)
- Implemented RFC #0185 - ClassFormatException for malformed annotations
  (friebe)  


Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Deprecated peer.mail.Message::getRecipient() - the iterative use of
  fetching the recipients with "while" in favor of getRecipients()
  (friebe)
- Deprecated getMessage() and getStatusCode() in peer.http.HttpResponse 
  in favor of message() and statusCode().
  (friebe, Gabriel Mihai Ghigea)
- Deprecated getHeaders() and getHeader() in peer.http.HttpResponse and
  replaced by headers() and header(), respectively. The new methods have
  changed return types to be able to support multiple headers
  (friebe, Gabriel Mihai Ghigea)

RFCs
~~~~
- Implemented RFC #0093 - xml.meta
  (friebe)

Bugfixes
~~~~~~~~
- Fixed errors when raising ClassLinkageExceptions in the classloader
  (friebe)
- Fixed peer.Socket::canRead() on Windows when using PHP's VC9 binaries 
  http://news.xp-framework.net/article/368/2010/08/23/
  (friebe)
- Fixed command line parsing on Windows when parsing triple quotes
  (friebe)
- Fixed peer.mail.SmtpTransport not sending an "RCPT TO:" after the 
  first message passed to send()
  (friebe)
- Fixed util.collections classes' equals() implementations for generic
  versions (a Vector of Strings should never equal a Vector of Objects,