@@ -170,3 +170,12 @@ class="net.xp_framework.unittest.core.ArrayTypeTest"
 
 [systemexit]
 class="net.xp_framework.unittest.core.SystemExitTest"
+
+[extension.invoke]
+class="net.xp_framework.unittest.core.extensions.ExtensionInvocationTest"
+
+[extension.notimported]
+class="net.xp_framework.unittest.core.extensions.NotImportedTest"
+
+[extension.notimportedhere]
+class="net.xp_framework.unittest.core.extensions.NotImportedHereTest"
